fix gap input field

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -2,7 +2,6 @@
     background-color: $gray-dark1;
     height: 1217px;
     padding-top: 130px;
-    
 
     &-container {
         display: flex;
@@ -93,10 +92,11 @@
 
     &-input-field {
         border: none;
-        width: 333px;
+        width: 185px;
         font-size: 18px;
         font-weight: 500;
         line-height: 30px;
+        font-family: "Inter";
         background-color: $gray-dark1;
     }
 
@@ -109,12 +109,22 @@
         outline: none;
     }
 
-    &-input-icon {
+    &-arrow {
+        width: 46px;
+        height: 46px;
+        background-color: $primary-color;
         position: absolute;
         top: 50%;
         right: 5px;
         transform: translateY(-50%);
         cursor: pointer;
+        border-radius: 100%;
+        padding: 11px;
+    }
+
+    &-input-icon {
+        width: 24px;
+        height: 24px;
     }
 
     &-copyright {
